# squirrel

./: CMakeLists.txt  conanfile.py  squirrel.sln
include/: squirrel.h
sq/: sq.vcproj  sq.vcxproj  sq.vcxproj.filters
sqstdlib/: CMakeLists.txt  Makefile  sqstdaux.cpp  sqstdlib.vcproj  sqstdlib.vcxproj  sqstdlib.vcxproj.filters  sqstdrex.cpp
squirrel/: CMakeLists.txt  Makefile  sqapi.cpp  sqdebug.cpp  sqstate.cpp  squirrel.vcproj  squirrel.vcxproj  squirrel.vcxproj.filters
